# StudyAI

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
exam/: lecture_2_tentafrågor.md
lecture_notes/: lecture3_agent.txt  lecture_1.txt  lecture_2.txt  lecture_3.txt  lecture_4.txt  lecture_verktyg_agent.txt
studyai/: __init__.py  agent_wire.py  lecture_resolve.py  mcp_agent_client.py  paths.py  summarize_agent.py  summary_prompts.py  tenta_rag.py
studyai/mcp_server/: __init__.py  __main__.py  logging_config.py  middleware.py  server.py
studyai/util/: __init__.py  embeddings.py  models.py  pretty_print.py  streaming_utils.py
